creacion de vista principal base

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decor-Sant</title>
+    <link href="/css/normalize.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/52073693b6.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans:400,600" rel="stylesheet">
+    <link rel="icon" type="image/png"
+        href="https://img.icons8.com/parakeet/48/000000/experimental-internet-parakeet.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/52073693b6.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" src="images/ornamento-decor-sant.png">
+    <link href="/css/index.css" rel="stylesheet">
+    <script defer src="../js/index.js"></script>
 </head>
+
 <body>
-    <h1>Hola Mundo!!</h1>
+    <header>
+        <nav class="navBar">
+            <ul>
+                <li><a href="Conocenos">Conocenos</a></li>
+                <li><a href="Catalogo">Catalogo</a></li>
+                <li><a href="Contacto">Contacto</a></li>
+            </ul>
+            <div class="logoContainer">
+                <a href="/"><img src="images/logodecor-sant.png"> </a>
+            </div>
+        </nav>
+        <hr>
+
+    </header>
+    <main>
+        <div class="container">
+            <div class="carrousel">
+                <img src="images/piso2.jpg" alt="Image 1" class="imagen">
+                <img src="https://www.kipclin.com/images/blog/10-consejos-para-conservar-y-cuidar-tus-pisos-de-madera.jpeg" alt="Image 2"  class="imagen">
+                <img src="https://sportlink.com.br/wp-content/uploads/2019/10/cancha-de-c%C3%A9sped-sint%C3%A9tico-Sportlink.jpg" alt="Image 3"  class="imagen">
+            </div>
+            <ul class="puntos">
+                <li class="punto activo"></li>
+                <li class="punto"></li>
+                <li class="punto"></li>
+            </ul>
+        </div>
+
+        
+    </main>
+    <footer>
+
+        <section class="contenedorFooter">
+
+            <article class="conocenos">
+                <h2>Conocenos</h2>
+                <a href="https://www.instagram.com/"> <img src="/images/instagram-icon.png" alt="Instagram"
+                        class="instagramIcon"> </a>
+                </a>
+                <a href="https://www.facebook.com/" target="blank">
+                    <img class="Facebook" src="/images/facebook-icon.png" alt="Facebook">
+                </a>
+
+                <a href="https://www.whatsapp.com/" target="blank">
+                    <img class="WhatsApp" src="/images/whatsapp-icon.png" alt="WhatsApp">
+                </a>
+                <a href="https://www.email.com/" target="blank">
+                    <img class="Email" src="/images/email.png" alt="Email">
+                </a>
+            </article>
+        </section>
+
+        <p class="derechos">| Made by traveller Coder | Copyright 2023 |  </p>
+    </footer>
+    
 </body>
+
 </html>
