--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,14 +22,28 @@
 <body>
     <header>
         <nav class="navBar">
-            <ul>
-                <li><a href="Conocenos">Conocenos</a></li>
-                <li><a href="Catalogo">Catalogo</a></li>
-                <li><a href="Contacto">Contacto</a></li>
-            </ul>
             <div class="logoContainer">
-                <a href="/"><img src="images/logodecor-sant.png"> </a>
+                <a href="/"><img src="/images/ornamento-decor-sant2.png" class="logo"> </a>
+                <h4>Decor Sant</h4>
+                <p>Pisos Y Revestimientos</p>
             </div>
+            <ul class="navBar-List">
+                <li class="navBar-item"><a href="#">Conocenos</a></li>
+                <li class="navBar-item"><a href="#">Catalogo</a>
+                    <ul class="dropdown">
+                        <li class="item-dropdown"><a href="#">Piso flotante</a></li>
+                        <li class="item-dropdown"><a href="#">Cortinas</a></li>
+                        <li class="item-dropdown"><a href="#">Cesped sintetico</a></li>
+                        <li class="item-dropdown"><a href="#">Decks</a></li>
+                        <li class="item-dropdown"><a href="#">Hidrolaqueados</a></li>
+                        <li class="item-dropdown"><a href="#">Alfombras</a></li>
+                        <li class="item-dropdown"><a href="#">Revestimientos</a></li>
+                        <li class="item-dropdown"><a href="#">Epoxi</a></li>
+                    </ul>
+                </li>
+                <li class="navBar-item"><a href="#">Contacto</a></li>
+            </ul>
+
         </nav>
         <hr>
 
