--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,8 +125,8 @@
 
 
 body {
-    background-color: gray;
-    overflow: hidden;
+    background-color: antiquewhite;
+    overflow: scroll;
 }
 
 hr {
@@ -150,11 +150,13 @@ hr {
     justify-content: flex-start;
     align-items: center;
     transition: all 0.3s ease;
+    
 }
 
 .container .imagen {
     width: 100%;
     height: 750px;
+    
 }
 
 .container .puntos {
