--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include ('partials/head') %>
-    <link href="css/index.css" rel="stylesheet">"
+    <link href="css/styles.css" rel="stylesheet">"
 </head>
 
 <body>
@@ -23,6 +23,7 @@
                 <li class="punto"></li>
             </ul>
         </div>
+        
         
     </main>
     <footer>
