--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,8 +5,8 @@
         <p>Pisos Y Revestimientos</p>
     </div>
     <ul class="navBar-List">
-        <li class="navBar-item"><a href="#">Conocenos</a></li>
-        <li class="navBar-item"><a href="#">Catalogo</a>
+        <li class="navBar-item"><a href="/about">Conocenos</a></li>
+        <li class="navBar-item"><a href="">Catalogo</a>
             <ul class="dropdown">
                 <li class="item-dropdown"><a href="#">Piso flotante</a></li>
                 <li class="item-dropdown"><a href="#">Cortinas</a></li>
@@ -18,7 +18,7 @@
                 <li class="item-dropdown"><a href="#">Epoxi</a></li>
             </ul>
         </li>
-        <li class="navBar-item"><a href="#">Contacto</a></li>
+        <li class="navBar-item"><a href="/contact">Contacto</a></li>
     </ul>
 </nav>
 <hr>
