--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -43,9 +43,9 @@
                     </p>
 
                     <p>
-                        <label for="website" class="colocar_website">Localidad/Provincia
+                        <label for="Localidad" class="colocar_website">Localidad/Provincia
                         </label>
-                        <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
+                        <input type="url" name="introducir_website" id="website" placeholder="Escribe tu localidad y provincia">
                     </p>
 
                     <p>
@@ -69,7 +69,7 @@
                     </button>
 
                     <p class="aviso">
-                        <span class="obligatorio"> * </span>los campos son obligatorios.
+                        <span class="obligatorio"> * </span>Campos obligatorios.
                     </p>
 
                 </form>
