--- a/public/css/about-style.css
+++ b/public/css/about-style.css
@@ -122,65 +122,62 @@
     
 }
 
-
-
-body {
-    background-color: black;
-    overflow-x: hidden;
-}
-
 hr {
     background-color: gold;
     height: 5px;
 }
 
 
-/* ---------------------------------------------------- SLIDER/CARRUSEL -----------------------------------------*/
+/* BODY */
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-.container {
-    width: 100vw;
-    overflow: hidden;
-    position: relative;
-}
-
-.container .carrousel {
-    width: 300%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    transition: all 0.3s ease;
-    
-}
-
-.container .imagen {
-    width: 100%;
-    height: 750px;
-    
-}
-
-.container .puntos {
-    width: 100vw;
-    padding: 1em;
+body {
     background-color: black;
+    
+}
+
+.presentacion {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items:center;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
 }
 
-.container .punto{
-    width: 1em;
-    height: 1em;
-    margin: 1em;
-    background-color: white;
-
+.presentacion p {
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: gray
+    
 }
 
-.container .punto.activo {
+
+hr {
     background-color: gold;
+    height: 5px;
 }
+
+.contenedor-clientes {
+    width: 100vw;
+    height: 750px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items:flex-start;
+    display: inline-block;
+}
+
+.contenedor-clientes h2 {
+    text-align: center;
+    font-size: large;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: gray
+}
+
+.contenedor-clientes h3 {
+    color: gray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
 
 /* FOOTEr */
 /* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
@@ -195,7 +192,7 @@ hr {
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: column;
-    margin-top: 0;
+
 }
 
 footer {
@@ -210,7 +207,7 @@ footer {
 
 footer img {
     height: 40px;
-    margin: 10px;
+    margin-bottom: 10px;
 
 }
 
