--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,6 @@
     <%- include ('partials/head') %>
     <link href="css/styles.css" rel="stylesheet">"
 </head>
-
 <body>
     <header>
         <%- include ('partials/header') %>
@@ -13,9 +12,9 @@
     <main>
         <div class="container">
             <div class="carrousel">
-                <img src="images/piso2.jpg" alt="Image 1" class="imagen">
-                <img src="https://www.kipclin.com/images/blog/10-consejos-para-conservar-y-cuidar-tus-pisos-de-madera.jpeg" alt="Image 2"  class="imagen">
-                <img src="https://sportlink.com.br/wp-content/uploads/2019/10/cancha-de-c%C3%A9sped-sint%C3%A9tico-Sportlink.jpg" alt="Image 3"  class="imagen">
+                <img src="./images/20220923_173405.jpg" alt="Image 1" class="imagen">
+                <img src="./images/20220722_172456.jpg" alt="Image 2"  class="imagen">
+                <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
             </div>
             <ul class="puntos">
                 <li class="punto activo"></li>
@@ -23,9 +22,8 @@
                 <li class="punto"></li>
             </ul>
         </div>
-        
-        
     </main>
+    <hr>
     <footer>
         <%- include ('partials/footer') %>
     </footer>
