--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
     </div>
     <ul class="navBar-List">
         <li class="navBar-item"><a href="/about">Conocenos</a></li>
-        <li class="navBar-item"><a href="">Catalogo</a>
+        <li class="navBar-item"><a href="">Show Room</a>
             <ul class="dropdown">
                 <li class="item-dropdown"><a href="#">Piso flotante</a></li>
                 <li class="item-dropdown"><a href="#">Cortinas</a></li>
@@ -19,6 +19,7 @@
             </ul>
         </li>
         <li class="navBar-item"><a href="/contact">Contacto</a></li>
+        <li class="navBar-item"><a href="/tienda">Tienda On-line</a></li>
     </ul>
 </nav>
 <hr>
