creacion de controlador, ruta y vista de tienda online

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li class="navBar-item"><a href="/contact">Contacto</a></li>
-        <li class="navBar-item"><a href="/tienda">Tienda On-line</a></li>
+        <li class="navBar-item"><a href="/store">Tienda On-line</a></li>
     </ul>
 </nav>
 <hr>
