creacion de controlador, ruta y vista de showroom

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
     </div>
     <ul class="navBar-List">
         <li class="navBar-item"><a href="/about">Conocenos</a></li>
-        <li class="navBar-item"><a href="">Show Room</a>
+        <li class="navBar-item"><a href="/showRoom">Show Room</a>
             <ul class="dropdown">
                 <li class="item-dropdown"><a href="#">Piso flotante</a></li>
                 <li class="item-dropdown"><a href="#">Cortinas</a></li>
