--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include ('partials/head') %>
-    <link href="css/about-style.css" rel="stylesheet">"
+    <link href="css/about-style.css" rel="stylesheet">
 <body>
     <header>
         <%- include ('partials/header') %>
@@ -17,12 +17,19 @@
         <hr>
         <section class=" contenedor-clientes">
             <h2>Algunas de las empresas que elijen y confian en Decor Sant</h2>
-                <div class="cliente">
-                    <h3>365 Kioskos Argentinos</h3>
-                    <img src="https://www.gaf-franquicias.com/images/notas/1606400097_upl_365kioscos.jpg" alt="kioskos">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW4PIVgZE1K3Vs7Tors9ms5LInFjSUliBhpqKXK2uxolqHuspVoo2Drr5KMnaRAPjZYLI&usqp=CAU" alt="kioskos">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyUSq1MAnXJRy9FggepxIbCc69m_RkGbyhVGbHoGg0vaf7l8TFi4cXguUmUXfBzh8mHoE&usqp=CAU" alt="kioskos">
+            
+            <div class="container">
+                <div class="carrousel">
+                    <img src="./images/20220923_173405.jpg" alt="Image 1" class="imagen">
+                    <img src="./images/20220722_172456.jpg" alt="Image 2"  class="imagen">
+                    <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
                 </div>
+                <ul class="puntos">
+                    <li class="punto activo"></li>
+                    <li class="punto"></li>
+                    <li class="punto"></li>
+                </ul>
+            </div>
                 <div class="cliente">
                     <h3>Brenson Concesionario oficial Ford</h3>
                     <img src="https://www.brenson.com.ar/wp-content/uploads/2021/10/taller-caballito.png" alt="brenson ">
