--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include ('partials/head') %>
-        <link href="css/contact-style.css" rel="stylesheet">"
+        <link href="css/contact-style.css" rel="stylesheet">
 
 <body>
     <header>
