--- a/src/views/showRoom.ejs
+++ b/src/views/showRoom.ejs
@@ -2,14 +2,68 @@
 <html lang="en">
 <head>
     <%- include('partials/head') %>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/showRoom-style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <%- include('partials/header') %>
     </header>
     <main>
-
+        <div class="container">
+            <a href="/showRoom/pisos-flotantes"><h1>Piso flotante</h1></a>
+                <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
+                <div class="texto">
+                    <p>~ Nuestra amplia seleccion de pisos flotantes hacen que todos tus proyectos se vuelvan realidad ~</p>
+                </div>
+        </div>
+        <div class="container">
+            <a href="/showRoom/cortinas"><h1>Cortinas</h1></a>
+            <img src="./images/20220923_173405.jpg" alt="Image 3"  class="imagen">
+            
+        </div>
+        <div class="container">
+            <h1>Cesped Sintetico</h1>
+            <div class="carrousel">
+                <img src="./images/banner-cesped.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        <div class="container">
+            <h1>Decks</h1>
+            <div class="carrousel">
+                <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        <div class="container">
+            <h1>Pulido e Hidrolaqueados</h1>
+            <div class="carrousel">
+                <img src="./images/banner-pulido.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        <div class="container">
+            <h1>Pisos de Taller y Pintura Epoxy</h1>
+            <div class="carrousel">
+                <img src="./images/banner-epoxy.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        <div class="container">
+            <h1>Revestimientos de pared</h1>
+            <div class="carrousel">
+                <img src="./images/banner-revestimiento.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        <div class="container">
+            <h1>Alfombras</h1>
+            <div class="carrousel">
+                <img src="./images/banner-alfombras.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
+        </div>
+        <div class="container">
+            <h1>Escaleras</h1>
+            <div class="carrousel">
+                <img src="./images/20220722_172456.jpg" alt="Image 3"  class="imagen">
+            </div>
+        </div>
     </main>
     <footer>
         <%- include('partials/footer') %>
