--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -17,7 +17,7 @@
                 <h3>Escribinos y en breve nos pondremos en contacto contigo</h3>
 
 
-                <form action="submeter-formulario.php" method="post">
+                <form action="" method="post">
 
 
                     <p>
@@ -45,7 +45,7 @@
                     <p>
                         <label for="Localidad" class="colocar_website">Localidad/Provincia
                         </label>
-                        <input type="url" name="introducir_website" id="website" placeholder="Escribe tu localidad y provincia">
+                        <input type="text" name="introducir_website" id="website" placeholder="Escribe tu localidad y provincia">
                     </p>
 
                     <p>
