--- a/src/views/showRoom.ejs
+++ b/src/views/showRoom.ejs
@@ -14,17 +14,25 @@
                 <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
                 <div class="texto">
                     <p>~ Nuestra amplia seleccion de pisos flotantes hacen que todos tus proyectos se vuelvan realidad ~</p>
+                    <p> Ingresa en nuestra tienda para obtener el tuyo o contactanos para una cotizacion</p>
                 </div>
         </div>
         <div class="container">
             <a href="/showRoom/cortinas"><h1>Cortinas</h1></a>
             <img src="./images/20220923_173405.jpg" alt="Image 3"  class="imagen">
-            
+            <div class="texto">
+                <p>~ Contamos con una amplia gama de telas y colores para que tengas la cortina que se ajusta a tus sueños ~</p>
+                <p> Contactanos para una cotizacion personalizada</p>
+            </div>
         </div>
         <div class="container">
             <h1>Cesped Sintetico</h1>
             <div class="carrousel">
                 <img src="./images/banner-cesped.jpg" alt="Image 3"  class="imagen">
+                <div class="texto">
+                    <p> Renova tus espacios exteriores con la mejor linea de cesped sintetico decorativo como deportivo profesional </p>
+                    <p>Contactanos para una cotizacion personalizada </p>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -38,12 +46,17 @@
             <div class="carrousel">
                 <img src="./images/banner-pulido.jpg" alt="Image 3"  class="imagen">
             </div>
+            <div class="texto">
+                <p> ~Volve a darle vida a tus pisos de madera con nuestro equipo de expertos~   </p>
+                <p>Contactanos para una cotizacion personalizada </p>
+            </div>
         </div>
         <div class="container">
             <h1>Pisos de Taller y Pintura Epoxy</h1>
             <div class="carrousel">
                 <img src="./images/banner-epoxy.jpg" alt="Image 3"  class="imagen">
             </div>
+            
         </div>
         <div class="container">
             <h1>Revestimientos de pared</h1>
