--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
     <title>Decor-Sant</title>
     <link href="/css/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/52073693b6.js" crossorigin="anonymous"></script>
