--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,14 +8,7 @@
         <li class="navBar-item"><a href="/about">Conocenos</a></li>
         <li class="navBar-item"><a href="/showRoom">Show Room</a>
             <ul class="dropdown">
-                <li class="item-dropdown"><a href="#">Piso flotante</a></li>
-                <li class="item-dropdown"><a href="#">Cortinas</a></li>
-                <li class="item-dropdown"><a href="#">Cesped sintetico</a></li>
-                <li class="item-dropdown"><a href="#">Decks</a></li>
-                <li class="item-dropdown"><a href="#">Hidrolaqueados</a></li>
-                <li class="item-dropdown"><a href="#">Alfombras</a></li>
-                <li class="item-dropdown"><a href="#">Revestimientos</a></li>
-                <li class="item-dropdown"><a href="#">Epoxi</a></li>
+                <li><a href="/showRoom">Conoce todo lo que Decor Sant tiene para ofrecerte </a></li>
             </ul>
         </li>
         <li class="navBar-item"><a href="/contact">Contacto</a></li>
