se cargan imagenes nuevas y se crea hoja de css de products

--- a/src/views/showRoom/pisoFlotante.ejs
+++ b/src/views/showRoom/pisoFlotante.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head') %>
-    <link href="../css/showRoom-style.css" rel="stylesheet">
+    <link href="../css/product-style.css" rel="stylesheet">
     
 </head>
 <body>
@@ -10,7 +10,15 @@
         <%- include ('../partials/header') %>
     </header>
     <main>
-
+        <div class="container">
+            <div class="container-producto">
+                <h2>Piso flotante melaminico</h2>
+                <img src="../images/piso-spc" alt="">
+            </div>
+            <div class="container-producto">
+                <h2>Piso flotante SPC</h2>
+            </div>
+        </div>
     </main>
     <footer>
         <%- include ('../partials/footer') %>
