--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <section class="contenedorFooter">
 
     <article class="conocenos">
-        <h2>Conocenos</h2>
+        <h2>Seguinos en nuestras redes para conocer las ultimas novedades</h2>
         <a href="https://www.instagram.com/"> <img src="/images/instagram-icon.png" alt="Instagram"
                 class="instagramIcon"> </a>
         </a>
