--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,11 +6,7 @@
     </div>
     <ul class="navBar-List">
         <li class="navBar-item"><a href="/about">Conocenos</a></li>
-        <li class="navBar-item"><a href="/showRoom">Show Room</a>
-            <ul class="dropdown">
-                <li><a href="/showRoom">Conoce todo lo que Decor Sant tiene para ofrecerte </a></li>
-            </ul>
-        </li>
+        <li class="navBar-item"><a href="/showRoom">Show Room</a></li>
         <li class="navBar-item"><a href="/contact">Contacto</a></li>
         <li class="navBar-item"><a href="/store">Tienda On-line</a></li>
     </ul>
