--- a/src/views/showRoom.ejs
+++ b/src/views/showRoom.ejs
@@ -10,72 +10,76 @@
     </header>
     <main>
         <div class="container">
-            <a href="/showRoom/pisos-flotantes"><h1>Piso flotante</h1></a>
+            <a href="/showRoom/piso-flotante"><h1>Piso flotante</h1>
                 <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
                 <div class="texto">
                     <p>~ Nuestra amplia seleccion de pisos flotantes hacen que todos tus proyectos se vuelvan realidad ~</p>
-                    <p> Ingresa en nuestra tienda para obtener el tuyo o contactanos para una cotizacion</p>
+                    <p> Ingresa en nuestra tienda para obtener el tuyo o contactanos para una cotizacion</p></a>
                 </div>
         </div>
         <div class="container">
-            <a href="/showRoom/cortinas"><h1>Cortinas</h1></a>
+            <a href="/showRoom/cortinas"><h1>Cortinas</h1>
             <img src="./images/20220923_173405.jpg" alt="Image 3"  class="imagen">
             <div class="texto">
                 <p>~ Contamos con una amplia gama de telas y colores para que tengas la cortina que se ajusta a tus sueños ~</p>
-                <p> Contactanos para una cotizacion personalizada</p>
+                <p> Contactanos para una cotizacion personalizada</p></a>
             </div>
         </div>
         <div class="container">
-            <h1>Cesped Sintetico</h1>
+            <a href="/showRoom/cesped"><h1>Cesped Sintetico</h1>
             <div class="carrousel">
                 <img src="./images/banner-cesped.jpg" alt="Image 3"  class="imagen">
                 <div class="texto">
                     <p> Renova tus espacios exteriores con la mejor linea de cesped sintetico decorativo como deportivo profesional </p>
-                    <p>Contactanos para una cotizacion personalizada </p>
+                    <p>Contactanos para una cotizacion personalizada </p></a>
                 </div>
             </div>
         </div>
         <div class="container">
-            <h1>Decks</h1>
+            <a href="/showRoom/deck"><h1>Decks</h1>
             <div class="carrousel">
                 <img src="./images/20220408_115405.jpg" alt="Image 3"  class="imagen">
+            </a>
             </div>
         </div>
         <div class="container">
-            <h1>Pulido e Hidrolaqueados</h1>
+            <a href="/showRoom/pulido"><h1>Pulido e Hidrolaqueados</h1>
             <div class="carrousel">
                 <img src="./images/banner-pulido.jpg" alt="Image 3"  class="imagen">
             </div>
             <div class="texto">
                 <p> ~Volve a darle vida a tus pisos de madera con nuestro equipo de expertos~   </p>
                 <p>Contactanos para una cotizacion personalizada </p>
+            </a>
             </div>
         </div>
         <div class="container">
-            <h1>Pisos de Taller y Pintura Epoxy</h1>
+            <a href="/showRoom/epoxy"><h1>Pisos de Taller y Pintura Epoxy</h1>
             <div class="carrousel">
                 <img src="./images/banner-epoxy.jpg" alt="Image 3"  class="imagen">
             </div>
-            
+            </a>
         </div>
         <div class="container">
-            <h1>Revestimientos de pared</h1>
+            <a href="/showRoom/revestimiento"><h1>Revestimientos de pared</h1>
             <div class="carrousel">
                 <img src="./images/banner-revestimiento.jpg" alt="Image 3"  class="imagen">
             </div>
+        </a>
         </div>
         <div class="container">
-            <h1>Alfombras</h1>
+            <a href="/showRoom/alfombra"><h1>Alfombras</h1>
             <div class="carrousel">
                 <img src="./images/banner-alfombras.jpg" alt="Image 3"  class="imagen">
             </div>
-        </div>
+        </a>
         </div>
         <div class="container">
-            <h1>Escaleras</h1>
+            <a href="/showRoom/escaleras"><h1>Escaleras</h1>
             <div class="carrousel">
                 <img src="./images/20220722_172456.jpg" alt="Image 3"  class="imagen">
             </div>
+            </a>
         </div>
     </main>
     <footer>
