--- a/src/views/showRoom/pisoFlotante.ejs
+++ b/src/views/showRoom/pisoFlotante.ejs
@@ -13,10 +13,16 @@
         <div class="container">
             <div class="container-producto">
                 <h2>Piso flotante melaminico</h2>
-                <img src="../images/piso-spc" alt="">
+                <p>Los pisos flotantes son una excelente opcion al momento de querer renovar los ambientes sin entrar en obra.</p><br>
+                <p>Ingresa en nuestra tienda para obtener el tuyo o contactanos para tener un presupuesto personalizado</p>
+                <a href="/tienda">Obtene el tuyo</a>
+
             </div>
-            <div class="container-producto">
+            <div class="container-producto2 ">
                 <h2>Piso flotante SPC</h2>
+                <p>Los pisos flotantes de SPC son la revolucion del mercado. Su resistencia a la humedad hace de estos la mejor opcion para esos ambientes dificiles</p><br>
+                <p>Ingresa en nuestra tienda para obtener el tuyo o contactanos para tener un presupuesto personalizado</p>
+                <a href="/tienda">Obtene el tuyo</a>
             </div>
         </div>
     </main>
