--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -12,4 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/52073693b6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" src="images/ornamento-decor-sant.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    
     <script defer src="../js/index.js"></script>
